--- a/Ngps.WebUI/Ngps.WebUI.csproj
+++ b/Ngps.WebUI/Ngps.WebUI.csproj
@@ -210,13 +210,16 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\Controllers\UserController.js" />
+    <Content Include="NgScript\Common\app.js" />
+    <Content Include="NgScript\Common\services.js" />
+    <Content Include="NgScript\Controllers\UserController.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="NgScript\Service\UserService.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -236,7 +239,15 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\ng.js" />
+    <Content Include="Scripts\plug\layer-v2.4\demo.html" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\layer.js" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\default\icon-ext.png" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\default\icon.png" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\default\loading-0.gif" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\default\loading-1.gif" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\default\loading-2.gif" />
+    <Content Include="Scripts\plug\layer-v2.4\layer\skin\layer.css" />
+    <Content Include="Scripts\plug\layer-v2.4\更新日志.txt" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -275,6 +286,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
+    <Content Include="Scripts\plug\layer-v2.4\layim.url" />
+    <Content Include="Scripts\plug\layer-v2.4\文档\jquery下载.url" />
+    <Content Include="Scripts\plug\layer-v2.4\文档\layer官网.url" />
+    <Content Include="Scripts\plug\layer-v2.4\文档\layer文档.url" />
+    <Content Include="Scripts\plug\layer-v2.4\文档\layer社区.url" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
